Nav overflow fix on mobile pt 19

--- a/blocks/src/blocks/mobile-container/style.scss
+++ b/blocks/src/blocks/mobile-container/style.scss
@@ -109,13 +109,7 @@
 
     @media (max-width: 768px) {
         overflow-y: scroll;
-        // height: 100vh;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        height: auto;
+        height: 100vh;
     }
 }
 
